fix alignment

--- a/src/implementations/vanilla/components/site-header/site-header-eu.scss
+++ b/src/implementations/vanilla/components/site-header/site-header-eu.scss
@@ -185,7 +185,6 @@ $_search-width-xl: 31.5rem;
   align-items: center;
   display: flex;
   justify-content: center;
-  margin-bottom: map.get(theme.$spacing, '2xs');
   position: relative;
 }
 
